// DBML script for investigation Module schema
// Author(s): George Foster (TPXImpact), Rizwan Nobeebux (Data Futurists), Elena Iurco (Data Futurists)
// Email(s): george.foster@tpximpact.com, rizwan.nobeebux@datafuturists.com, elena.iurco@datafuturists.com

// Script created for use with dbdiagram.io for ERD

// --------------------------------------
// investigation Component
// --------------------------------------

// Main Tables

table hazard_type {
  hazard_type_id integer [pk, increment]
  hazard_type nvarchar(100)
  health_risk_rating_id integer
  category nvarchar(500)

  Note: "Stores types of hazards"
  Indexes {
    (health_risk_rating_id)
  }
}


table hazard_report {
  hazard_report_id integer [pk, increment]
  hazard_report_reference varchar(36)
  uprn integer
  tenancy_id varchar(50)
  date_reported date
  reported_by nvarchar(100)
  description nvarchar(500)
  photo_evidence nvarchar(500)
  location_details nvarchar(500)
  emergency_action_taken integer [default: 0]
  made_safe_date date
  further_work_required integer [default: 0]
  further_work_due_date date
  report_status_id integer
  investigation_type_id integer

  Note: "Stores hazard reports"
}

table investigation {
  investigation_id integer [pk, increment]
  investigation_reference varchar(36)
  uprn integer
  tenancy_id varchar(50)
  hazard_report_id integer
  trigger_source_id integer
  investigation_type_id integer
  investigation_scheduled_date date
  investigation_completed_date date
  investigator_id integer
  hazard_confirmed integer [default: 0]
  sla_breach_flag integer [default: 0]
  notification_sent_to_tenant integer [default: 0]
  investigation_notes nvarchar(500)

  Note: "Stores investigation details"
}

table investigation_hazard {
  investigation_hazard_id integer [pk, increment]
  hazard_type_id integer
  investigation_id integer
  hazard_report_id integer
  severity_id integer
  notes nvarchar(500)

  Note: "Maps investigations to hazards"
}

table notification {
  notification_id integer [pk, increment]
  investigation_id integer
  tenancy_id integer
  work_order_id varchar(255)
  notification_type_id integer
  escalation_id integer
  date_sent date
  notification_method_id integer
  content_summary nvarchar(500)

  Note: "Notifications related to investigations"
}

table escalation {
  escalation_id integer [pk, increment]
  escalation_reference varchar(36)
  investigation_id integer
  escalation_reason nvarchar(100)
  escalation_stage_id integer
  escalation_type_id integer
  escalated_to nvarchar(100)
  escalation_start_date date
  escalation_end_date date
  action_taken nvarchar(500)
  compensation_amount decimal(10,2)
  alternative_accommodation_details nvarchar(500)
  tenant_acceptance integer [default: 0]
  escalation_notes nvarchar(500)

  Note: "Tracks escalation actions"
}

table reference {
  id varchar(36) [pk]
  allocated_by_code integer
  allocated_by_description varchar(50)
  description varchar(200)
  allocated_by varchar(50)

  Note: "References for hazard reports, investigations and escalations"
}

Table investigation_status {
  investigation_status_id varchar [pk]
  code varchar [not null, unique]
  description text
}

Table investigation_status_history {
  investigation_status_history_id varchar [pk]
  investigation_id varchar
  investigation_status_id varchar
  updated_by varchar
  reason_code_id text
  created_date_time timestamp
  entered_date_time timestamp
  exited_date_time timestamp
  comments text

  Note: "Tracks the status changes of an investigation, including timestamps and reasons."
}

Ref: investigation_status_history.investigation_id > investigation.investigation_id
Ref: investigation_status_history.investigation_status_id > investigation_status.investigation_status_id
Ref: investigation_status_history.reason_code_id > reason_code.reason_code_id


// Code Lists

table health_risk_rating {
  health_risk_rating_id integer [pk, increment]
  health_risk_rating nvarchar(20)
}

table severity {
  severity_id integer [pk, increment]
  severity nvarchar(20)
}

table investigation_type {
  investigation_type_id integer [pk, increment]
  investigation_type nvarchar(20)
}

table report_status {
  report_status_id integer [pk, increment]
  report_status nvarchar(20)
}

table trigger_source {
  trigger_source_id integer [pk, increment]
  trigger_source nvarchar(20)
}

table escalation_status {
  escalation_status_id integer [pk, increment]
  escalation_status nvarchar(20)
}

table notification_type {
  notification_type_id integer [pk, increment]
  notification_type nvarchar(20)
}

table escalation_stage {
  escalation_stage_id integer [pk, increment]
  escalation_stage nvarchar(20)
}

table notification_method {
  notification_method_id integer [pk, increment]
  notification_method nvarchar(20)
}

table escalation_type {
  escalation_type_id integer [pk, increment]
  escalation_type nvarchar(30)
}

table investigator {
  investigator_id integer [pk, increment]
  investigator_name nvarchar(100)
}

// Relationships
ref: hazard_type.health_risk_rating_id > health_risk_rating.health_risk_rating_id
ref: hazard_report.uprn > address.uprn
ref: hazard_report.tenancy_id > tenancy.tenancy_id
ref: hazard_report.report_status_id > report_status.report_status_id
ref: hazard_report.investigation_type_id > investigation_type.investigation_type_id
ref: investigation.uprn > address.uprn
ref: investigation.tenancy_id > tenancy.tenancy_id
ref: investigation.hazard_report_id > hazard_report.hazard_report_id
ref: investigation.trigger_source_id > trigger_source.trigger_source_id
ref: investigation.investigation_type_id > investigation_type.investigation_type_id
ref: investigation_hazard.hazard_type_id > hazard_type.hazard_type_id
ref: investigation_hazard.investigation_id > investigation.investigation_id
ref: investigation_hazard.hazard_report_id > hazard_report.hazard_report_id
ref: investigation_hazard.severity_id > severity.severity_id
ref: investigation.investigator_id > investigator.investigator_id
ref: notification.investigation_id > investigation.investigation_id
ref: notification.tenancy_id > tenancy.tenancy_id
ref: notification.work_order_id > work_order.work_order_id
ref: notification.notification_type_id > notification_type.notification_type_id
ref: notification.notification_method_id > notification_method.notification_method_id
ref: escalation.investigation_id > investigation.investigation_id
ref: escalation.escalation_stage_id > escalation_stage.escalation_stage_id
ref: escalation.escalation_type_id > escalation_type.escalation_type_id
ref: hazard_report.hazard_report_reference > reference.id
ref: investigation.investigation_reference > reference.id
ref: escalation.escalation_reference > reference.id

// --------------------------------------
// Property Component
// --------------------------------------

// Main Tables

Table site {
  site_id integer [pk]
  site_name varchar(255) [not null]
}

Table property {
  property_id integer [pk]
  property_name varchar(255) [not null]
  site_id integer [not null]
}

Table unit {
  unit_id integer [pk]
  property_id integer [not null]
  alert_type_id integer 
  lease varchar(255)
}

Table address {
  address_id integer [pk]
  unit_id integer [not null]
  uprn integer [not null]
  address_line varchar(255)
  building_name varchar(255)
  street_name varchar(255)
  building_number varchar(50)
  floor integer
  city_name varchar(100) [not null]
  country varchar(100) [not null]
  post_code varchar(20) [not null]
}

Table physical_characteristics {
  physical_char_id integer [pk]
  property_id integer [not null]
  window_glazing_type_id integer
  wall_insulation_type_id integer
  roof_insulation_type_id integer
  ventilation_type varchar(100)
  built_year integer
  construction_type_id integer 
  last_updated_date date [not null]
}

Table heating_system {
  heating_system_id integer [pk]
  property_id integer [not null]
  energy_control varchar(100)
  heat_conversion_method varchar(100)
  purpose varchar(100)
  is_smart_system boolean [default: false]
  installation_date date
  manufacturer varchar(255)
  model_number varchar(100)
  last_serviced_date date
  notes text
}

Table thermal_transmittance {
  thermal_trans_id integer [pk]
  physical_char_id integer [not null]
  u_value numeric(5,3) [not null]
  element varchar(100) [not null]
  measurement_date date [not null]
  notes text
}

Table energy_performance_certification {
  epc_id integer [pk]
  unit_id integer [not null]
  certificate_number varchar(50) [unique, not null]
  current_energy_rating integer [not null]
  current_energy_band char [not null]
  potential_energy_rating integer [not null]
  potential_energy_band char [not null]
  current_env_impact_rating integer [not null]
  current_env_impact_band char [not null]
  potential_env_impact_rating integer [not null]
  potential_env_impact_band char [not null]
  co2_per_year integer [not null]
  space_heating_cost_year numeric(10,2) [not null]
  water_heating_cost_year numeric(10,2) [not null]
  lighting_cost_year numeric(10,2) [not null]
  total_energy_cost_year numeric(12,2) [not null]
  energy_use_per_sqm_year integer [not null]
  recommendation_summary text
}

Table certification {
  certification_id integer [pk]
  unit_id integer [not null]
  certification_type_id integer [not null]
  issue_date date [not null]
  expiry_date date [not null]
  issued_by varchar(255) [not null]
  status varchar(50) [not null]
  attachment_url varchar(2048)
}

// Codelists/lookup Tables

Table energy_efficiency_band_code {
  band_id integer [pk]
  code char [unique, not null]
}

Table location_alert_type_code {
  alert_type_id integer [pk]
  code varchar(50) [unique, not null]
}

Table glazing_layer_type_code {
  glazing_type_id integer [pk]
  code varchar(50) [unique, not null]
}

Table roof_insulation_type_code {
  insulation_type_id integer [pk]
  code varchar(50) [unique, not null]
}

Table wall_insulation_type_code {
  insulation_type_id integer [pk]
  code varchar(50) [unique, not null]
}

Table construction_type_code {
  construction_type_id integer [pk]
  code varchar(50) [unique, not null]
}

Table certification_type_code {
  certification_type_id integer [pk]
  code varchar(50) [unique, not null]
}

// Relationships

Ref: property.site_id > site.site_id
Ref: unit.property_id > property.property_id
Ref: unit.alert_type_id > location_alert_type_code.alert_type_id
Ref: address.unit_id > unit.unit_id
Ref: physical_characteristics.property_id > property.property_id
Ref: physical_characteristics.window_glazing_type_id > glazing_layer_type_code.glazing_type_id
Ref: physical_characteristics.wall_insulation_type_id > wall_insulation_type_code.insulation_type_id
Ref: physical_characteristics.roof_insulation_type_id > roof_insulation_type_code.insulation_type_id
Ref: physical_characteristics.construction_type_id > construction_type_code.construction_type_id
Ref: heating_system.property_id > property.property_id
Ref: thermal_transmittance.physical_char_id > physical_characteristics.physical_char_id
Ref: energy_performance_certification.unit_id > unit.unit_id
Ref: energy_performance_certification.current_energy_band > energy_efficiency_band_code.band_id
Ref: energy_performance_certification.potential_energy_band > energy_efficiency_band_code.band_id
Ref: energy_performance_certification.current_env_impact_band > energy_efficiency_band_code.band_id
Ref: energy_performance_certification.potential_env_impact_band > energy_efficiency_band_code.band_id
Ref: certification.unit_id > unit.unit_id
Ref: certification.certification_type_id > certification_type_code.certification_type_id

// --------------------------------------
// Tenant Component
// --------------------------------------

// --------------------------------------
// CORE PERSON & TENANCY STRUCTURE
// --------------------------------------

Table tenant_person {
  tenant_id integer [pk, increment]
  person_alert_code_id integer [ref: > person_alert_code.person_alert_code_id]
  full_name varchar(255) [not null]
  date_of_birth date
  phone_number varchar(50)
  email varchar(255)
}

Table tenancy {
  tenancy_id integer [pk, increment]
  tenant_id integer [not null, ref: > tenant_person.tenant_id]
  address_id integer [not null]
  start_date date [not null]
  end_date date
  tenancy_type varchar(100) [not null]
  tenancy_status varchar(100) [not null]
 }

Table household_member_person {
  household_member_id integer [pk, increment]
  tenant_id integer [not null, ref: > tenant_person.tenant_id]
  tenancy_id integer [not null, ref: > tenancy.tenancy_id]
  person_alert_code_id integer [ref: > person_alert_code.person_alert_code_id]
  full_name varchar(255) [not null]
  date_of_birth date
  relationship_to_tenant varchar(100)
  is_contract_holder boolean [default: false]
}


Table person_alert_code {
  person_alert_code_id integer [pk, increment]
  code varchar(50) [not null, unique]
  name varchar(255) [not null]
  description text
}

// --------------------------------------
// WorkOrder Component
// --------------------------------------

// Main Tables

Table contractor_organisation {
  contractor_organisation_id integer [pk, increment]
  name varchar(255)
  contractor_portal varchar(255)
  subcontractors text
}

Table work_class {
  work_class_id integer [pk, increment]
  code varchar(50) [not null, unique]
}

Table trade_code {
  trade_code_id integer [pk, increment]
  code varchar(100)
}

Table rate_schedule_item {
  rate_schedule_item_id integer [pk, increment]
  code varchar(100) [not null, unique]
}

Table work_priority {
  work_priority_id varchar(255) [pk]
  priority_code varchar(100)
  priority_description text
  effective_date_time timestamp
  number_of_days integer
  comments text
  required_start_date_time date
  required_completion_date_time date
}

Table work_status {
  work_status_id varchar(255) [pk]
  code varchar(100) [not null, unique]
  description text
}

Table reason_code {
  reason_code_id varchar(255) [pk]
  code varchar(100) [not null, unique]
}

Table work_order {
  work_order_id varchar(255) [pk]
  work_element_id varchar(255)
  address_id varchar(255)
  investigation_id varchar(255)
  escalation_id varchar(255)
  tenancy_id varchar(255)
  tenant_id varchar(255)
  hazard_report_id varchar(255)
  work_class_id varchar(255)
  location_alert_id varchar(255)
  work_priority_id varchar(255)
  contractor_organisation_id varchar(255)
  date_raised date
  date_reported date
  planned_start_date date
  planned_finish_date date
  actual_start_date_time timestamp
  actual_completion_date_time timestamp
  description_of_work text
  estimated_cost decimal(10,2)
  estimated_labour_hours decimal(5,2)
  location_of_repair varchar(255)
  job_status_update varchar(255)
  repair_sla_breach_flag varchar(10)

  Note: "CHECK (repair_sla_breach_flag IN ('Yes', 'No'))"
}

Table work_element {
  work_element_id varchar(50) [pk]
  work_order_id varchar(50)
  rate_schedule_item_id varchar(255)
  trade_code_id varchar(100)
  service_charge_subject varchar(255)
}

Table work_element_dependency {
  work_element_id varchar(50) [pk]
  depends_on_work_element_id varchar(50)
  type varchar(100)
  timing varchar(255)
  description text
}

Table work_order_status_history {
  work_order_status_history_id varchar(255) [pk]
  work_order_id varchar(255)
  work_status_id varchar(100)
  updated_by varchar(255)
  reason_id text
  created_date_time timestamp
  entered_date_time timestamp
  exited_date_time timestamp
  comments text
}

Table work_order_complete {
  work_order_complete_id varchar(255) [pk]
  work_order_id varchar(255)
  bill_of_material_item varchar(255)
  completed_work_elements text
  operatives_used text
  job_status_update varchar(255)
  follow_on_work varchar(255)
}

Table work_order_access_information {
  access_info_id varchar(255) [pk]
  work_order_id varchar(255)
  description varchar(100)
  key_safe text
}

// Relationships
Ref: work_order.work_class_id > work_class.work_class_id
Ref: work_order.work_priority_id > work_priority.work_priority_id
Ref: work_order.contractor_organisation_id > contractor_organisation.contractor_organisation_id
Ref: work_order.location_alert_id > location_alert_type_code.alert_type_id
Ref: work_order.address_id > address.address_id
Ref: work_order.investigation_id > investigation.investigation_id
Ref: work_order.escalation_id > escalation.escalation_id
Ref: work_order.tenancy_id > tenancy.tenancy_id
Ref: work_order.tenant_id > tenant_person.tenant_id
Ref: work_order.hazard_report_id > hazard_report.hazard_report_id
Ref: work_order.work_element_id > work_element.work_element_id
Ref: work_element.work_order_id > work_order.work_order_id
Ref: work_element.rate_schedule_item_id > rate_schedule_item.rate_schedule_item_id
Ref: work_element.trade_code_id > trade_code.trade_code_id
Ref: work_element_dependency.work_element_id > work_element.work_element_id
Ref: work_element_dependency.depends_on_work_element_id > work_element.work_element_id
Ref: work_order_status_history.work_order_id > work_order.work_order_id
Ref: work_order_status_history.work_status_id > work_status.work_status_id
Ref: work_order_status_history.reason_id > reason_code.reason_code_id
Ref: work_order_complete.work_order_id > work_order.work_order_id
Ref: work_order_access_information.work_order_id > work_order.work_order_id





